<resources>
    <string name="app_name">My Endava</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_profile">Profile</string>
    <string name="title_tags">Tags</string>
    <string name="email_hint">Email</string>
    <string name="password_hint"><i>Password</i></string>
    <string name="code_hint"><i>Authorization Code</i></string>

    <!--    sign in activity-->
    <string name="sign_in">Sign In</string>
    <string name="sign_in_as_guest">SIGN IN AS GUEST</string>
    <string name="forgot_password">FORGOT YOUR PASSWORD?</string>
    <string name="invalid_email_message">Invalid email</string>
    <string name="terms_and_cond_unchecked_message">You must agree with the terms and conditions</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="wifi_password_title">Guest Wi-Fi password</string>
    <string name="random_project_name">Random Project Name</string>
    <string name="sign_in_logo">Logo Image</string>
    <string name="background_image">Background Image</string>
    <string name="project_image">Project Image</string>
    <string name="splash_image_name">Application Name Image</string>
    <string name="title_faq">FAQ</string>
    <string name="title_info">Info</string>
    <string name="search_title">Search tags</string>
    <string name="add_title">Add</string>
    <string name="title_activity_tags">Tags</string>
    <string name="visitor_card_number">Visitor card number</string>
    <string name="about_me">ABOUT ME</string>
    <string name="edit_button">EDIT</string>
    <string name="save_button">SAVE</string>
    <string name="text_about_me">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ut risus arcu. In sapien justo, rutrum quis magna quis, maximus accumsan est. Duis dignissim ex dui, vel malesuada tortor [...]</string>
    <string name="other_information">OTHER INFORMATION</string>
    <string name="user_description">Cupcake ipsum dolor sit amet candy jujubes. Fruitcake bonbon candy canes apple pie oat cake tart macaroon brownie I love. Sweet roll gummies sweet donut liquorice biscuit muffin. Jelly beans jelly jelly-o jelly chocolate bar sweet roll ice cream sesame snaps. Donut ice cream bear claw. Pastry oat cake candy chocolate bar gingerbread. Dragée gingerbread muffin gingerbread wafer. Sesame snaps cotton candy dessert sweet.</string>
    <string name="view_more_button">VIEW MORE</string>
    <string name="phone_number">Phone number</string>
    <string name="location_hint">Location</string>
    <string name="technical_title">TECHNICAL</string>
    <string name="soft_title">SOFT</string>
    <string name="projects_title">PROJECTS</string>
    <string name="add_button">ADD</string>
    <string name="interests_title">INTERESTS</string>
    <string name="save_text_press">SAVE</string>
    <string name="edit_text_press">EDIT</string>
    <string name="title_alert_dialog_remove_tag">Are you sure you want to remove this tag?</string>
    <string name="button_text_yes_dialog_remove_tag">YES</string>
    <string name="button_text_cancel_dialog_remove_tag">CANCEL</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="terms_and_cond"><font color="1e2432">I agree to the </font><font color="#DE411B">Terms and conditions</font></string>

    <!--    tag screen-->
    <string name="tag_search_hint">Enter a tag name</string>
    <string name="multiple_src_btn_text">Multiple Search</string>
    <string name="filter_button_text">Filters</string>
    <string name="multiple_search">MULTIPLE SEARCH</string>
    <string name="show_people">SHOW PEOPLE</string>
    <string name="tag_remove_success">Tag successfully removed</string>
    <string name="tag_remove_error">There has been an error while removing the tag</string>

    <!--    calendar screen-->
    <string name="calendar_switch_text">MY EVENTS</string>

    <!-- faq screen -->
    <string name="faq_search_hint">Search by faq name</string>
    <string name="nav_bar_name">config_showNavigationBar</string>
    <string name="boolean_def_type">bool</string>
    <string name="android_def_package">android</string>
    <string name="no_users_found">No users have been found that have the following tags:\n</string>
    <string name="multiple_search_description">The list of users that have the following tags:\n</string>
    <string name="multiple_search_tag_description">Custom Tags Description</string>

    <!-- Suggest tag screen -->
    <string name="tag_group_label">Tag group</string>
    <string name="tag_details_label">Tag details</string>
    <string name="suggest_tag_label">SUGGEST TAG</string>
    <string name="tag_title_label">Tag title</string>
    <string name="tag_description_label">Tell us what this tag represents and why should be added …</string>
    <string name="tag_suggestion_success">Tag successfully submitted</string>
    <string name="tag_suggestion_error">There has been an error while submitting the suggestion</string>
    <string name="please_fill_all_the_fields">Please choose a category and fill all the fields in order to submit a tag</string>
    <string name="tag_group_placeholder">Press the add button in order to add tags</string>

    <string name="profile_update_success">Profile successfully updated</string>
    <string name="profile_update_error">There has been an error while updating the profile</string>
    <string name="add_tag_label">Add Tags</string>
    <string name="add_tags_placeholder">No tags have been found</string>
    <string name="tags_added_success">Tags added successfully</string>
    <string name="tag_added_success">Tag added successfully</string>
    <string name="tags_added_error">There has been an error while adding the tags</string>
</resources>
