<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="@dimen/sign_in_background_height"
        android:scaleType="fitXY"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sign_in_background"
        android:contentDescription="@string/background_image" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/sign_in_logo_size"
        android:layout_height="@dimen/sign_in_logo_size"
        android:layout_marginStart="@dimen/sign_in_logo_margin"
        android:layout_marginTop="@dimen/sign_in_logo_margin"
        android:layout_marginEnd="@dimen/sign_in_logo_margin"
        android:layout_marginBottom="@dimen/sign_in_logo_margin"
        app:layout_constraintBottom_toBottomOf="@+id/background"
        app:layout_constraintEnd_toEndOf="@+id/background"
        app:layout_constraintStart_toStartOf="@+id/background"
        app:layout_constraintTop_toTopOf="@+id/background"
        app:srcCompat="@drawable/endava_logo"
        android:contentDescription="@string/sign_in_logo" />

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/sign_in_email_horizontal_margins"
        android:layout_marginTop="@dimen/sign_in_email_top_margin"
        android:layout_marginEnd="@dimen/sign_in_email_horizontal_margins"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="@dimen/sign_in_input_drawable_padding"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:textColor="@color/endava_dark_orange"
        android:textColorHint="@color/endava_light_orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/background"
        android:importantForAutofill="no"
        tools:ignore="UnusedAttribute" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/sign_in_password_horizontal_margins"
        android:layout_marginTop="@dimen/sign_in_password_top_margin"
        android:layout_marginEnd="@dimen/sign_in_password_horizontal_margins"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="@dimen/sign_in_input_drawable_padding"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textColor="@color/endava_dark_orange"
        android:textColorHint="@color/endava_light_orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        android:importantForAutofill="no"
        tools:ignore="UnusedAttribute" />

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="0dp"
        android:layout_height="@dimen/sign_in_button_height"
        android:layout_marginStart="@dimen/sign_in_buttons_horizontal_margins"
        android:layout_marginEnd="@dimen/sign_in_buttons_horizontal_margins"
        android:layout_marginBottom="@dimen/sign_in_button_bottom_margin"
        android:background="@drawable/sign_in_button"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/sign_in_as_guest_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/sign_in_as_guest_button"
        android:layout_width="0dp"
        android:layout_height="@dimen/sign_in_button_height"
        android:layout_marginStart="@dimen/sign_in_buttons_horizontal_margins"
        android:layout_marginEnd="@dimen/sign_in_buttons_horizontal_margins"
        android:layout_marginBottom="@dimen/sign_in_guest_button_bottom_margin"
        android:background="@drawable/sign_in_as_guest_button"
        android:text="@string/sign_in_as_guest"
        android:textColor="@color/endava_orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>