<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/project_card_margins"
    android:layout_marginTop="@dimen/project_card_margins"
    android:layout_marginEnd="@dimen/project_card_margins"
    android:layout_marginBottom="@dimen/project_card_margins"
    app:cardBackgroundColor="@color/cardboard_gray"
    app:cardElevation="@dimen/project_card_elevation">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="160dp"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/home_assistant"
            android:contentDescription="@string/project_image" />

        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/random_project_name"
            android:textAlignment="center"
            android:textSize="@dimen/project_card_name_size"
            android:textStyle="bold"
            android:padding="@dimen/project_card_name_padding"
            app:layout_constraintBottom_toBottomOf="@+id/image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/project_card_description_margins"
            android:layout_marginEnd="@dimen/project_card_description_margins"
            android:ellipsize="end"
            android:maxLines="3"
            android:minLines="3"
            android:text="@string/lorem_ipsum"
            android:padding="@dimen/project_card_description_padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/tags_chip_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>